Update from java lts 11 to 17